--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div id="unsuccessAlert" class="unsuccess-box">
             <i class="fa fa-times" aria-hidden="true"></i>
-            <h1>Please, Buy atleast one ticket to confirm to booking,Thank you.</h1>
+            <h1>Please, Buy atleast one ticket to confirm your booking,Thank you.</h1>
             <button id="cancel" class="confirm">OK</button>
         </div>
 
